Release 1.8