@@ -30,6 +30,23 @@ WORK_DIR_PERSISTENT_VOLUME_CLAIM_MOUNT_DIR=/opt/mr3-run/work-dir
 
 # JAVA_HOME and PATH are already set inside the container.
 
+# If USE_JAVA_17 is set to true,
+#
+#   1) update mr3.am.launch.cmd-opts and mr3.container.launch.cmd-opts in conf/mr3-site.xml.
+#     remove: -XX:+AggressiveOpts
+#
+# Cf. run-master.sh and run-worker.sh set "--add-opens".
+#
+USE_JAVA_17=false
+
+# HIVE_MR3_JVM_OPTION = JVM options for Metastore and HiveServer2
+if [[ $USE_JAVA_17 = false ]]; then
+  HIVE_MR3_JVM_OPTION="-XX:+UseG1GC -XX:+ResizeTLAB -XX:+UseNUMA -server -Djava.net.preferIPv4Stack=true -XX:+AggressiveOpts"
+else
+  HIVE_MR3_JVM_OPTION="-XX:+UseG1GC -XX:+ResizeTLAB -XX:+UseNUMA -server -Djava.net.preferIPv4Stack=true"
+  HIVE_MR3_JVM_OPTION="$HIVE_MR3_JVM_OPTION --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
+fi
+
 # If hive.mr3.compaction.using.mr3 in conf/hive-site.xml is set to true, Metastore needs a PersistentVolume.
 # See spec.template.spec.containers.volumeMounts/volumes in yaml/metastore.yaml and helm/hive/templates/metastore.yaml.
 # metastore.mountLib in helm/hive/values.yaml should be set to true to mount the MySQL connector provided by the user.
