@@ -35,6 +35,11 @@ function run_master {
 -Djava.security.auth.login.config=/opt/mr3-run/conf/jgss.conf \
 -Djava.security.krb5.conf=/opt/mr3-run/conf/krb5.conf \
 -Dsun.security.jgss.debug=true"
+
+    if [[ $USE_JAVA_17 = true ]]; then
+      JAVA_OPTS="$JAVA_OPTS --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
+    fi
+
     $JAVA $JAVA_OPTS $@
 
     exit_code=$?
