@@ -31,6 +31,10 @@ function run_worker {
 -Djava.security.krb5.conf=/opt/mr3-run/conf/krb5.conf \
 -Dsun.security.jgss.debug=true"
 
+    if [[ $USE_JAVA_17 = true ]]; then
+      JAVA_OPTS="$JAVA_OPTS --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
+    fi
+
     runShuffleHandlerProcess=${@: -1}
     if [ "$runShuffleHandlerProcess" = "true" ]; then
       $JAVA $JAVA_OPTS $@ &
